# InkglassOdyssey

./: .gitignore  CLAUDE.md  README.md  _architecture.html  alembic.ini  pyproject.toml  requirements.txt
.claude/: settings.local.json
abilities/inkglass_dark/: cleave.json  shadow_step.json
animations/inkglass_dark/: registry.json
crafting/inkglass_dark/: antivenom_recipe.json  healing_salve_recipe.json  iron_longsword_recipe.json  leather_armour_recipe.json
docs/: architecture_research.md  design_proposals.md
factions/inkglass_dark/: artisan_collective.json  knights_moralis.json  merchant_guild.json  thieves_den.json  witches_circle.json
fauna/inkglass_dark/: mud_viper.json  thornveil_hare.json
items/inkglass_dark/: antivenom_tincture.json  camphor_resin.json  hare_pelt.json  healing_salve.json  iron_ingot.json  iron_longsword.json  iron_ore.json  leather_armour.json  leather_strip.json  moonpetal.json  viper_venom_sac.json
lore/inkglass_dark/: thornveil_lowlands.json  thornveil_lowlands_geography.json
npcs/inkglass_dark/: halvric_factor.json  seta_inkglass_dark.json  tinte_apprentice.json
quests/inkglass_dark/: merchant_guild_intro.json
regions/inkglass_dark/: cladd_territory.json  merchant_quarter.json  outer_settlements.json  thornveil_lowlands.json
relay/: config.py  database.py  logging_config.py  main.py  models.py  mutations.py  registry.py  schemas.py  state_log.py
relay/admin/: app.py  reload.py
relay/ai/: chat_prompts.py  game_context.py  npc_loader.py  rp_prompts.py
relay/auth/: middleware.py  tokens.py
relay/checks/: resolver.py
relay/combat/: __init__.py  conditions.py  damage.py  death_state.py  initiative.py  lifecycle.py  resolver.py
relay/companions/: ambient.py  combat_ai.py  loyalty.py  manager.py  relationship.py
relay/consequences/: evaluator.py  npc_state.py  profiles.py  world_flags.py
relay/crafting/: crafter.py  fauna_loader.py  gathering.py  recipe_loader.py  region_loader.py
relay/economy/: pricing.py  shop.py  wallet.py
relay/endpoints/: _helpers.py  character.py  checks.py  combat.py  companion.py  craft.py  dialogue.py  dice.py  (+5 more)
schemas/: ability.json  animation_directive.json  character_sheet.json  event_arc_blueprint.json  event_arc_instance.json  faction.json  fauna.json  item.json  lore.json  npc_personality.json  npc_template.json  quest.json  recipe.json  region.json  scenario.json  scene_state.json  shop_data.json  traversal_mode.json  world_config.json  world_events.json
(+84 files in other folders)
